--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: <todo>
+        image: gcr.io/qwiklabs-gcp-02-e77ed3e8532e/sample-app:v1.0
         ports:
         - containerPort: 8080
